<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/iv_fr_launch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/ballot_logo_description"
            android:scaleType="centerInside"
            android:src="@drawable/ballot_logo" />

        <Button
            android:id="@+id/bt_fr_launch_upcoming"
            style="@style/bt_style"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_elections"
            app:layout_constraintBottom_toTopOf="@+id/bt_fr_launch_representatives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_fr_launch_representatives"
            style="@style/bt_style"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>